Reworked the UI to improve it's looks: Added icons to the boxes, changed fonts and colors. Refactored the CSS a bit to remove some redundancies and improve readability. There is an issue with the temperature-status div, where the content-box class does not get applied, so there are redundant lines

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body{
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Jost', sans-serif;  
 }
 
 .vertically-aligned-text{
@@ -9,10 +9,10 @@ body{
   font-size: 3em;
 }
 
-.flex-child{
+.small-flex-child{
   flex: 50%;
   margin: 30px;
-  height: 200px;
+  height: 350px;
 
   display: flex;           
   flex-direction: column;  
@@ -20,9 +20,10 @@ body{
   align-items: center;
 }
 
-.neutral{
-  background-color: rgb(200, 200, 200);
-  color: black;
+.content-box{
+  border-radius: 5px;
+  text-align: center;
+  border: 0.5px solid black;
 }
 
 .ok{
@@ -31,7 +32,7 @@ body{
 }
 
 .bad{
-  background-color: rgb(161, 32, 32);
+  background-color: #AB2346;
   color: white;
 }
 
@@ -39,8 +40,25 @@ body{
   filter: blur(10px);
 }
 
+.icon-container{
+  background-color: #8EB1C7;
+  width: 100%;
+  height: 200px;
+  vertical-align: middle;
+  position: relative;
+}
+
+.icon-container img{
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+
 #loading-screen{
-  background-color: rgba(207, 207, 207, 0.589);
+  background-color: rgba(255, 255, 255, 0.658);
   width: 100%;
   height: 100%;
   position: absolute;
@@ -53,8 +71,7 @@ body{
   align-items: center;
 }
 
-
-#header{
+#title{
   text-align: center;
   margin: 100px;
   font-weight: 600;
@@ -65,27 +82,16 @@ body{
   display: flex;
 }
 
-#current-temperature{
-  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
-  border-radius: 5px;
-  text-align: center;
-}
-
-#temperature-average{
-  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
-  border-radius: 5px;
-  text-align: center;
-}
-
 #temperature-status{
-  margin: auto;
   margin: 30px;
-  height: 200px;
-  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
-  border-radius: 5px;
+  height: 150px;
 
   display: flex;           
   flex-direction: column;  
   justify-content: center; 
   align-items: center;
+  
+  border-radius: 5px;
+  text-align: center;
+  border: 0.5px solid black;
 }
